@@ -1,3 +1,8 @@
+2002-10-20  Per Bothner  <per@bothner.com>
+
+	* Compilation.java (addClass):  Change first arg to ModuleExp.
+	This allows some simplification.
+
 2002-10-16  Per Bothner  <per@bothner.com>
 
 	* LambdaExp.java (allocFrame): Never set type from frameType.
